Create deploy.yml file

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://USERNAME.github.io/nft_dev",
+  "homepage": "https://github.com/trudypwong/ssd3900-nft_dev",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
